finally got the full test suite of tbleSpace working.